# goQuant

./: .gitignore  Anchor.toml  QUICK_START.md  README.md  SETUP_STATUS.md  package-lock.json  package.json  technical_documentation.tex  test_results_performance.tex
backend/: Cargo.toml
backend/src/: database.rs  error.rs  lib.rs  main.rs  migration.rs  monitoring.rs  multisig.rs  program_builder.rs  proposal.rs  rollback.rs  security.rs  squads.rs  timelock.rs  websocket.rs
backend/tests/: migration_test.rs  proposal_test.rs
docs/: API.md  ARCHITECTURE.md  GOVERNANCE.md  MIGRATION_GUIDE.md  OPERATIONS.md  PRODUCTION_READY.md  SMART_CONTRACT.md  SUMMARY.md
migrations/: 001_initial_schema.sql  002_add_audit_log.sql
programs/upgrade-manager/: Cargo.toml
programs/upgrade-manager/src/: lib.rs
programs/upgrade-manager/tests/: upgrade-manager.ts
scripts/: deploy.sh  setup.sh
tests/: integration_test.rs
