[package]
name = "goquant-upgrade-service"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
solana-sdk = "~1.16"
solana-client = "~1.16"
solana-program = "~1.16"
anchor-client = "0.28"
anchor-lang = "0.28"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
bs58 = "0.5"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"

