[package]
name = "upgrade-manager"
version = "0.1.0"
description = "Program Upgrade & Migration System for GoQuant DEX"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "upgrade_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

